--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#about">ABOUT</a></li>
             </ul>
         </div>
-        <h1>COMING SOON!</h1>
+        <iframe src="spring build/index.html"></iframe>
     </div>
     <!---------------------development log----------------------->
     <div id="development-log">
