--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
         <div class="navbar">
             <h1>Spring Defense</h1>
             <ul>
-                <li><a href="#header">PLAY GAME!</a></li>
-                <li><a href="#about">ABOUT</a></li>
-                <li><a href="#playtest">PLAYTEST</a></li>
-                <li><a href="#development-log">DEVELOPMENT LOG</a></li>
+                <li><a href="#header">Play Game</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#playtest">Playtest</a></li>
+                <li><a href="#development-log">Development Log</a></li>
             </ul>
         </div>
         <iframe src="spring build/index.html"></iframe>
+
     </div>
     <!--------About---------->
     <div id="about">
-        <h2>About</h2>
         <div class="container">
+            <h2>About</h2>
             <p>Welcome to Spring Defense! Prepare to embark on an exciting journey where you have to protect your 
                 flowers from annoying and parasitic bugs. Spring Defense takes you into a vibrant and blossoming world, teeming with colorful flora and menacing insects.
             <br><br>
@@ -39,8 +40,8 @@
     </div>
     <!----------------PlayTest--------------------->
     <div id="playtest">
-        <h2>Playtest</h2>
         <div class="container">
+            <h2>Playtest</h2>
             <div class="tab-titles">
                 <p class="tab-links active-link" onclick="opentab('Alpha')">Alpha Playtest</p>
                 <p class="tab-links" onclick="opentab('Beta')">Beta Playtest</p>
@@ -78,8 +79,8 @@
     </div>
     <!---------------------development log----------------------->
     <div id="development-log">
-        <h2>Development Log</h2>
         <div class="container">
+            <h2>Development Log</h2>
             development log coming soon!
         </div>
     </div>
