--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 <body>
     <div id="header">
         <div class="navbar">
-            <h1>Spring Defense</h1>
+            <a href="index.html"><h1>Spring Defense</h1></a>
             <ul>
-                <li><a href="#header">Play Game</a></li>
+                <li><a href="game.html#header">Play Game</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#playtest">Playtest</a></li>
                 <li><a href="#development-log">Development Log</a></li>
             </ul>
         </div>
-        <iframe src="spring build/index.html"></iframe>
-
+        <iframe src="https://youtu.be/raumSJZ-Jho"></iframe>
     </div>
     <!--------About---------->
     <div id="about">
@@ -101,6 +100,11 @@
         }
         event.currentTarget.classList.add("active-link");
         document.getElementById(tabname).classList.add("active-tab");
+    }
+</script>
+<script>
+    function redirectToGame() {
+        window.location.href = "game.html"; // Replace "game.html" with the actual URL of your game page
     }
 </script>
 </html>
