--- a/game.html
+++ b/game.html
@@ -21,7 +21,7 @@
                 <li><a href="index.html#development-log">Development Log</a></li>
             </ul>
         </div>
-        <iframe src="spring build/index.html"></iframe>
+        <iframe class ="game" src="spring build/index.html"></iframe>
     </div>
 
     <div class="copyright">
