--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#development-log">Development Log</a></li>
             </ul>
         </div>
-        <iframe src="https://youtu.be/raumSJZ-Jho"></iframe>
+        <iframe class="youtube" src="https://www.youtube.com/watch?v=raumSJZ-Jho"></iframe>
     </div>
     <!--------About---------->
     <div id="about">
@@ -80,7 +80,74 @@
     <div id="development-log">
         <div class="container">
             <h2>Development Log</h2>
-            development log coming soon!
+            <ul>
+                <li><span>April 17,2023:</span> </br>
+                    Brainstormed ideas for the project and came up with game mechanics for the conceptual prototype.
+                </li>
+                </br>
+                <li><span>April 24, 2023:</span> </br>
+                    Finished the first digital prototype of the game.
+                </br>
+                    Implemented 4 main game mechanics: drag and drop UI, enemy spawning, static currency system, and shooting mechanic.
+                </br>
+                    All prototypes were kept in separate builds.
+                </li>
+            </br>
+                <li><span>May 1, 2023:</span> </br>
+                    Completed the second digital prototype.
+                </br>
+                    Further developed the 4 main game mechanics.
+                </br>
+                    Added more enemy types to the game.
+                </br>
+                    Continued keeping prototypes in separate builds.
+                </li>
+            </br>
+                <li><span>May 6, 2023:</span> </br>
+                    Combined the working prototypes into a single build, creating a working game in the alpha stage.
+                </br>
+                    Incorporated images and textures into the game.
+                </li>
+            </br>
+                <li><span>May 8, 2023:</span> </br>
+                    Conducted an alpha playtest and received feedback from the players.
+                </br>
+                    Made necessary changes to the game based on the feedback.
+                </li>
+            </br>
+            <li><span>May 13, 2023:</span> </br>
+                Improved the game based on the initial playtest feedback.
+            </br>
+                Added different enemy types, shooting mechanics, and a main menu to the game.
+            </li>
+        </br>
+            <li><span>May 15, 2023:</span> </br>
+                Conducted a beta playtest and gathered more feedback from the players.
+            </li>
+        </br>
+            <li><span>May 22, 2023:</span> </br>
+                Added multiple characters to the game, each with unique abilities.
+            </br>
+                Implemented different types of projectiles that deal varying amounts of damage.
+            </br>
+                Introduced multiple enemy spawns with different intervals and health.
+            </br>
+                Updated the user interface (UI) to enhance the player experience.
+            </li>
+        </br>
+        <li><span>May 30, 2023:</span> </br>
+            Implemented a feature where enemies drop coins that players must collect to earn more points.
+        </br>
+        Addressed any remaining bugs related to the game and the UI.
+        </br>
+        Enhanced the UI of the main menu.
+        </br>
+        Added sound effects and background music to enhance the overall game experience.
+        </br>
+        Applied final touch-ups to the game.
+        </li>
+            </br>
+            </ul>
         </div>
     </div>
     <div class="copyright">
