--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#development-log">Development Log</a></li>
             </ul>
         </div>
-        <iframe class="youtube" src="https://www.youtube.com/watch?v=raumSJZ-Jho"></iframe>
+        <iframe class = "youtube" src="https://www.youtube.com/embed/raumSJZ-Jho" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <!--------About---------->
     <div id="about">
