--- a/game.html
+++ b/game.html
@@ -24,6 +24,42 @@
         <iframe class ="game" src="spring build/index.html"></iframe>
     </div>
 
+    <div id="credits">
+        <div class="container">
+            <h2>Credits</h2>
+        <span>Vincent Wirawan: Worked on the enemy system, the coin mechanic, and the main menu. Responsible for final touch ups, background music, as well as a little bit of sound effect</span>
+        <span>Samar Malla: Worked on the shooting mechanic and sound effects. </span>  
+        <span>Morrison Young: Worked on the currency system.</span>
+        <span>Jacob White: Worked on the drag and drop system, sprites and images of the game.</span>
+        </div>
+    </div>
+
+    <div id="references">
+        <div class="container">
+            <h2>References</h2>
+            <span>All of the assets used in our game that we did not produce ourselves are documented below. All of these assets are free to use and are available for download.</span>
+        </br></br>
+            <h3>Musics</h3>
+            <li>Path in the Forest by Olexy</li>
+            <li>Bach's Bouree in Celtic Minor by Alexander Nakarada</li>
+            <li>A Time Forgotten by Darren Curtis</li>
+            <li>Into Oblivion by Darren Curtis</li>
+        </br>
+            <h3>Background Image</h3>
+            <span>Downloaded from vector images</span>
+        </br></br>
+            <h3>Sound Effects</h3>
+            <span>All sound effects are free for download from Pixabay.</span>
+        </div>
+    </div>
+
+    <div class="source-code">
+        <div class="container">
+          <h2>Source Code</h2>
+          <span>Source code can be viewed here: <a href="https://github.com/iZyns/spring-game">https://github.com/iZyns/spring-game</a></span> 
+        </div>
+    </div>
+
     <div class="copyright">
         <p>Copyright © 2023 Spring Defense</p>
     </div>
