--- a/index.html
+++ b/index.html
@@ -19,10 +19,23 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#playtest">Playtest</a></li>
                 <li><a href="#development-log">Development Log</a></li>
+                <li><a href="#presentation">Presentations</a></li>
             </ul>
         </div>
         <iframe class = "youtube" src="https://www.youtube.com/embed/raumSJZ-Jho" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
+
+    <div id="screenshots">
+        <div class="container">
+        <h2>Screenshots</h2>
+        <img src="img/image (1).png">
+        <img src="img/image (3).png">
+        <img src="img/image (2).png">
+        <img src="img/image.png">
+        <img src="img/image1.png">
+    </div>
+    </div>
+
     <!--------About---------->
     <div id="about">
         <div class="container">
@@ -72,7 +85,14 @@
                 </p>
             </div>
             <div class="tab-contents" id="Final">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium at quas velit fugit, minus beatae molestiae tempore soluta impedit exercitationem eaque ducimus inventore dolor voluptates aut facere fugiat modi excepturi!</p>
+                <p>For our final playtest, we updated our UI as well as added some sound effects and background musics. 
+                    We also conducted a final playtest survey where we asked playtesters to leave comments and feedback to our game.
+                </p>
+                <br>
+                <h3>Summary</h3>
+                <span>Click </span>
+                <a href="https://docs.google.com/spreadsheets/d/1c4pTu4vtX3YQ7djt0Huq3J2zK7-wA9mzP9C0odS9xOQ/edit?usp=sharing">HERE</a>
+                <span> to view our final playtest responses.</span>
             </div>
         </div>
     </div>
@@ -150,6 +170,31 @@
             </ul>
         </div>
     </div>
+
+    <div id="presentation">
+        <div class="container">
+            <h2>Presentations</h2>
+            <span>View our class presentation here:</span>
+            <br><br>
+            <span>Postmortem Presentation</span>
+            <embed src="img/Untitled presentation.pdf" type="application/pdf" width="100%" height="600px" />
+            <br><br>
+            <span>Final Playtest Presentation</span>
+            <embed src="img/CSS 385 Game Presentation.pdf" type="application/pdf" width="100%" height="600px" />
+        </div>
+    </div>
+
+    <div id="reflection">
+        <div class="container">
+            <h2>Team Reflection</h2>
+            <br>
+            <span>Our team reflection on the development of Spring Defense reveals both accomplishments and areas for improvement. While we faced challenges in team communication and time management, we successfully created a playable game with various levels and mechanics. We take pride in our dedication to refining the gameplay experience, which resulted in an engaging and enjoyable product. However, it is essential to acknowledge our shortcomings in communication and time management, which impacted our development process. Moving forward, we aim to improve these areas and implement strategies such as regular check-ins and project management tools to enhance our collaboration.</span>
+            <br><br>
+            <span>Given an additional two weeks, we have identified exciting features to enhance Spring Defense further. Expanding the game with more levels, animations, enemies, and an upgrade feature will provide players with extended gameplay, visual appeal, and a sense of progression. We recognize the value of player engagement and replayability, and these additions will contribute to a more immersive and enjoyable experience. Reflecting on our past experiences, we are committed to addressing our communication and time management challenges to ensure a more efficient and productive workflow in future projects.
+            </span>
+        </div>
+    </div>
+
     <div class="copyright">
         <p>Copyright © 2023 Spring Defense</p>
     </div>
