--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
                         while having different cooldown timer for each of the enemies. We also had to make sure that the enemy walks in a 1 single lane.
                     </li>
                     <li><span>Currency System: </span>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur natus mollitia aliquid officia in unde atque molestiae earum odio. Porro a, enim quia ipsum beatae hic assumenda ad temporibus quis.
+                        For the initial prototype we focused on providing the currency implementation for the game. Using a UI element to display the amount of money the player has during a given round. The basic function was to have the player gain money when an enemy is destroyed and spend money when a unit is placed. This was later developed with the team to expanded to increasing player interaction by adding a droppable sprite element that needs to be clicked on in a certain amount of time to gain the money for each defeated enemy.
                     </li>
                     <li><span>Drag and Drop UI: </span>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur natus mollitia aliquid officia in unde atque molestiae earum odio. Porro a, enim quia ipsum beatae hic assumenda ad temporibus quis.
+                       This game mechanic has grid of containers that is used as a place to contain the units. The player can click to begin dragging a unit from the UI bar. When hovering the dragged unit sprite over a container, the container will be highlighted to show the player that the unit will be placed in that square of the grid if they release the click. If released over a container in the grid, the sprite being dragged will be deleted and a unit will be placed within that container. If not, the sprite will be deleted and no unit will be placed.
                     </li>
                     <li><span>Shooting: </span>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur natus mollitia aliquid officia in unde atque molestiae earum odio. Porro a, enim quia ipsum beatae hic assumenda ad temporibus quis.
+                       We created a diverse range of shooting mechanics that employ distinct projectiles such as fireballs, axes, and missiles. Each projectile exhibits unique characteristics in terms of speed and damage inflicted upon enemies. To enhance gameplay dynamics, we assigned different units with the ability to shoot specific projectiles based on their respective price points. We also considered missiles to stand out as the most potent in terms of enemy damage, while axes boast an impressive speed when fired. The fireball projectile, on the other hand, presents a balanced blend of characteristics from both axes and missiles. Lastly,  we varied the firing rates of these projectiles from each other, further contributing to the diverse gameplay experience.
                     </li>
                 </ul>
             </div>
